--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,11 +28,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_9
-        targetCompatibility JavaVersion.VERSION_1_9
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '11'
     }
     buildFeatures {
         viewBinding = true
@@ -47,6 +47,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
+    implementation 'androidx.hilt:hilt-common:1.0.0'
+    implementation 'androidx.work:work-runtime-ktx:2.8.1'
     testImplementation 'junit:junit:4.13.2'
 
     implementation "androidx.paging:paging-runtime:3.1.1"
@@ -73,7 +75,7 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.airbnb.android:lottie:6.0.0'
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
@@ -86,7 +88,7 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.google.android.material:material:1.9.0'
 
     implementation "androidx.activity:activity-ktx:1.7.1"
     implementation "androidx.datastore:datastore-preferences:1.0.0"
@@ -102,6 +104,12 @@ dependencies {
     kapt 'com.google.dagger:hilt-compiler:2.45'
 
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
+
+    // JUnit for unit testing
+    testImplementation 'junit:junit:4.13.2'
+
+    // Mocking framework
+    testImplementation 'org.mockito:mockito-core:4.0.0'
 
 
     //Room
