--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,11 +105,21 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
 
-    // JUnit for unit testing
+    // JUnit
     testImplementation 'junit:junit:4.13.2'
 
-    // Mocking framework
-    testImplementation 'org.mockito:mockito-core:4.0.0'
+    // Mockk for Kotlin
+    testImplementation 'io.mockk:mockk:1.12.0'
+
+    // AndroidX Test - Core
+    testImplementation 'androidx.test:core:1.5.0'
+
+    // AndroidX Test - JUnit
+    testImplementation 'androidx.test.ext:junit:1.1.5'
+
+    // AndroidX Test - Truth
+    testImplementation 'androidx.test.ext:truth:1.5.0'
+    testImplementation 'com.google.truth:truth:1.1.3'
 
 
     //Room
