--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,6 +107,10 @@ dependencies {
 
     // JUnit
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito:mockito-core:4.0.0'
+    testImplementation 'org.mockito:mockito-core:4.0.0'
+    testImplementation 'org.mockito:mockito-inline:4.0.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:3.11.2'
 
     // Mockk for Kotlin
     testImplementation 'io.mockk:mockk:1.12.0'
