--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:21.0.1'
     implementation 'androidx.hilt:hilt-common:1.0.0'
     implementation 'androidx.work:work-runtime-ktx:2.8.1'
+    implementation 'androidx.work:work-testing:2.8.1'
     testImplementation 'junit:junit:4.13.2'
 
     implementation "androidx.paging:paging-runtime:3.1.1"
@@ -111,6 +112,7 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:4.0.0'
     testImplementation 'org.mockito:mockito-inline:4.0.0'
     testImplementation 'org.mockito:mockito-junit-jupiter:3.11.2'
+    testImplementation "org.robolectric:robolectric:4.2.1"
 
     // Mockk for Kotlin
     testImplementation 'io.mockk:mockk:1.12.0'
